--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,30 @@
-.DS_Store
-*.xcuserdatad
+#OS junk files
+[Tt]humbs.db
+*.DS_Store
+*.bak*
+*.swp
+*.orig
+
+#emacs turds
+*~
+TAGS
+
+# Xcode ignores
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+*.xcuserstate
+*.xccheckout
+xcuserdata
+profile
+*.moved-aside
+DerivedData
+
+
+#Version control files
+.svn
